Correceted overflow issue.

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,12 @@
   font-family: Montserrat, sans-serif;
 }
 
+h1 {
+  font-size: 64px;
+  font-weight: 800;
+  color: white;
+}
+
 h2 {
   font-size: 48px;
   font-weight: 800;
@@ -25,12 +31,17 @@ header {
 }
 
 nav {
-  margin: 30px 0px;
+  margin: 15px 0px;
 }
+
 header img {
   height: 60px;
   margin: 10px 50px 10px 100px;
   float: left;
+}
+
+ul{
+  display: inline-block;
 }
 
 header nav ul li {
@@ -44,6 +55,7 @@ header a {
   text-decoration: none;
   color: black;
   margin: 0px 20px;
+  cursor: pointer;
 }
 
 header a:hover {
@@ -63,9 +75,6 @@ header a:hover {
 }
 
 .hero h1 {
-  font-size: 64px;
-  font-weight: 800;
-  color: white;
   text-transform: uppercase;
   text-shadow: 1px 1px 4px black;
 }
@@ -102,6 +111,8 @@ header a:hover {
 /*-------------------Shop Styles-------------------*/
 .shop {
     height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
 
 .shop-content {
